src/parser.output
Terminals unused in grammar

    AND
    OR
    NOT
    SUN
    EVENT
    OFFSET
    SKIP_CONDITION
    MINUS
    PLUS


State 23 conflicts: 7 shift/reduce
State 26 conflicts: 7 shift/reduce
State 70 conflicts: 7 shift/reduce
State 72 conflicts: 7 shift/reduce
State 73 conflicts: 3 shift/reduce
State 74 conflicts: 7 shift/reduce
State 87 conflicts: 1 shift/reduce
State 92 conflicts: 1 shift/reduce
State 99 conflicts: 3 shift/reduce
State 106 conflicts: 3 shift/reduce


Grammar

    0 $accept: program $end

    1 program: ε
    2        | program automation

    3 $@1: ε

    4 automation: CREATE STRING $@1 COLON fields

    5 fields: ε
    6       | fields field

    7 field: ID STRING
    8      | ID NUMBER
    9      | DESCRIPTION STRING
   10      | MODE IDENTIFIER
   11      | LISTEN LBRACKET listen_items RBRACKET
   12      | WHEN LBRACKET condition_items RBRACKET
   13      | DO LBRACKET action_items RBRACKET

   14 listen_items: listen_item
   15             | listen_items COMMA listen_item

   16 listen_item: LPAREN attr_list RPAREN

   17 condition_items: condition_item
   18                | condition_items COMMA condition_item

   19 condition_item: LPAREN attr_list RPAREN

   20 attr_list: ε
   21          | attr
   22          | attr_list attr

   23 attr: DEVICE_ID IDENTIFIER
   24     | ENTITY_ID IDENTIFIER
   25     | STATEKW IS IDENTIFIER
   26     | TIMEKW AFTER TIME_LITERAL
   27     | TIMEKW BEFORE TIME_LITERAL
   28     | STATEKW CHANGES TO IDENTIFIER
   29     | IDENTIFIER IS IDENTIFIER
   30     | IDENTIFIER IDENTIFIER
   31     | IDENTIFIER LBRACKET id_list RBRACKET
   32     | CHANGES TO IDENTIFIER
   33     | WITH IDENTIFIER LBRACKET id_list RBRACKET

   34 id_list: IDENTIFIER
   35        | IDENTIFIER COMMA id_list

   36 action_items: action_item
   37             | action_item COMMA action_items

   38 action_item: LPAREN action_body RPAREN

   39 action_body: IF condition_group action_block else_part
   40            | simple_action

   41 condition_group: LBRACKET condition_items RBRACKET
   42                | LPAREN attr_list RPAREN

   43 action_block: ε
   44             | simple_action
   45             | action_block simple_action

   46 else_part: ELSE IF condition_group action_block else_part
   47          | ELSE action_block
   48          | ε

   49 simple_action: DELAY DURATION_LITERAL
   50              | AUTOMATION TRIGGERKW attr_list
   51              | IDENTIFIER IDENTIFIER attr_list


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    STRING <str> (258) 4 7 9
    IDENTIFIER <str> (259) 10 23 24 25 28 29 30 31 32 33 34 35 51
    NUMBER <str> (260) 8
    TIME_LITERAL <str> (261) 26 27
    DURATION_LITERAL <str> (262) 49
    CREATE (263) 4
    ID (264) 7 8
    DESCRIPTION (265) 9
    MODE (266) 10
    LISTEN (267) 11
    WHEN (268) 12
    DO (269) 13
    IF (270) 39 46
    ELSE (271) 46 47
    AND (272)
    OR (273)
    NOT (274)
    AFTER (275) 26
    BEFORE (276) 27
    IS (277) 25 29
    STATEKW (278) 25 28
    TIMEKW (279) 26 27
    DEVICE_ID (280) 23
    ENTITY_ID (281) 24
    WITH (282) 33
    CHANGES (283) 28 32
    TO (284) 28 32
    SUN (285)
    EVENT (286)
    OFFSET (287)
    SKIP_CONDITION (288)
    AUTOMATION (289) 50
    TRIGGERKW (290) 50
    DELAY (291) 49
    LBRACKET (292) 11 12 13 31 33 41
    RBRACKET (293) 11 12 13 31 33 41
    LPAREN (294) 16 19 38 42
    RPAREN (295) 16 19 38 42
    COLON (296) 4
    COMMA (297) 15 18 35 37
    MINUS (298)
    PLUS (299)


Nonterminals, with rules where they appear

    $accept (45)
        on left: 0
    program (46)
        on left: 1 2
        on right: 0 2
    automation <automation> (47)
        on left: 4
        on right: 2
    $@1 (48)
        on left: 3
        on right: 4
    fields (49)
        on left: 5 6
        on right: 4 6
    field (50)
        on left: 7 8 9 10 11 12 13
        on right: 6
    listen_items <items> (51)
        on left: 14 15
        on right: 11 15
    listen_item <item> (52)
        on left: 16
        on right: 14 15
    condition_items <items> (53)
        on left: 17 18
        on right: 12 18 41
    condition_item <item> (54)
        on left: 19
        on right: 17 18
    attr_list <alist> (55)
        on left: 20 21 22
        on right: 16 19 22 42 50 51
    attr <alist> (56)
        on left: 23 24 25 26 27 28 29 30 31 32 33
        on right: 21 22
    id_list <str> (57)
        on left: 34 35
        on right: 31 33 35
    action_items <action> (58)
        on left: 36 37
        on right: 13 37
    action_item <action> (59)
        on left: 38
        on right: 36 37
    action_body <action> (60)
        on left: 39 40
        on right: 38
    condition_group <items> (61)
        on left: 41 42
        on right: 39 46
    action_block <action> (62)
        on left: 43 44 45
        on right: 39 45 46 47
    else_part <action> (63)
        on left: 46 47 48
        on right: 39 46
    simple_action <action> (64)
        on left: 49 50 51
        on right: 40 44 45


State 0

    0 $accept: • program $end

    $default  reduce using rule 1 (program)

    program  go to state 1


State 1

    0 $accept: program • $end
    2 program: program • automation

    $end    shift, and go to state 2
    CREATE  shift, and go to state 3

    automation  go to state 4


State 2

    0 $accept: program $end •

    $default  accept


State 3

    4 automation: CREATE • STRING $@1 COLON fields

    STRING  shift, and go to state 5


State 4

    2 program: program automation •

    $default  reduce using rule 2 (program)


State 5

    4 automation: CREATE STRING • $@1 COLON fields

    $default  reduce using rule 3 ($@1)

    $@1  go to state 6


State 6

    4 automation: CREATE STRING $@1 • COLON fields

    COLON  shift, and go to state 7


State 7

    4 automation: CREATE STRING $@1 COLON • fields

    $default  reduce using rule 5 (fields)

    fields  go to state 8


State 8

    4 automation: CREATE STRING $@1 COLON fields •
    6 fields: fields • field

    ID           shift, and go to state 9
    DESCRIPTION  shift, and go to state 10
    MODE         shift, and go to state 11
    LISTEN       shift, and go to state 12
    WHEN         shift, and go to state 13
    DO           shift, and go to state 14

    $default  reduce using rule 4 (automation)

    field  go to state 15


State 9

    7 field: ID • STRING
    8      | ID • NUMBER

    STRING  shift, and go to state 16
    NUMBER  shift, and go to state 17


State 10

    9 field: DESCRIPTION • STRING

    STRING  shift, and go to state 18


State 11

   10 field: MODE • IDENTIFIER

    IDENTIFIER  shift, and go to state 19


State 12

   11 field: LISTEN • LBRACKET listen_items RBRACKET

    LBRACKET  shift, and go to state 20


State 13

   12 field: WHEN • LBRACKET condition_items RBRACKET

    LBRACKET  shift, and go to state 21


State 14

   13 field: DO • LBRACKET action_items RBRACKET

    LBRACKET  shift, and go to state 22


State 15

    6 fields: fields field •

    $default  reduce using rule 6 (fields)


State 16

    7 field: ID STRING •

    $default  reduce using rule 7 (field)


State 17

    8 field: ID NUMBER •

    $default  reduce using rule 8 (field)


State 18

    9 field: DESCRIPTION STRING •

    $default  reduce using rule 9 (field)


State 19

   10 field: MODE IDENTIFIER •

    $default  reduce using rule 10 (field)


State 20

   11 field: LISTEN LBRACKET • listen_items RBRACKET

    LPAREN  shift, and go to state 23

    listen_items  go to state 24
    listen_item   go to state 25


State 21

   12 field: WHEN LBRACKET • condition_items RBRACKET

    LPAREN  shift, and go to state 26

    condition_items  go to state 27
    condition_item   go to state 28


State 22

   13 field: DO LBRACKET • action_items RBRACKET

    LPAREN  shift, and go to state 29

    action_items  go to state 30
    action_item   go to state 31


State 23

   16 listen_item: LPAREN • attr_list RPAREN

    IDENTIFIER  shift, and go to state 32
    STATEKW     shift, and go to state 33
    TIMEKW      shift, and go to state 34
    DEVICE_ID   shift, and go to state 35
    ENTITY_ID   shift, and go to state 36
    WITH        shift, and go to state 37
    CHANGES     shift, and go to state 38

    IDENTIFIER  [reduce using rule 20 (attr_list)]
    STATEKW     [reduce using rule 20 (attr_list)]
    TIMEKW      [reduce using rule 20 (attr_list)]
    DEVICE_ID   [reduce using rule 20 (attr_list)]
    ENTITY_ID   [reduce using rule 20 (attr_list)]
    WITH        [reduce using rule 20 (attr_list)]
    CHANGES     [reduce using rule 20 (attr_list)]
    $default    reduce using rule 20 (attr_list)

    attr_list  go to state 39
    attr       go to state 40


State 24

   11 field: LISTEN LBRACKET listen_items • RBRACKET
   15 listen_items: listen_items • COMMA listen_item

    RBRACKET  shift, and go to state 41
    COMMA     shift, and go to state 42


State 25

   14 listen_items: listen_item •

    $default  reduce using rule 14 (listen_items)


State 26

   19 condition_item: LPAREN • attr_list RPAREN

    IDENTIFIER  shift, and go to state 32
    STATEKW     shift, and go to state 33
    TIMEKW      shift, and go to state 34
    DEVICE_ID   shift, and go to state 35
    ENTITY_ID   shift, and go to state 36
    WITH        shift, and go to state 37
    CHANGES     shift, and go to state 38

    IDENTIFIER  [reduce using rule 20 (attr_list)]
    STATEKW     [reduce using rule 20 (attr_list)]
    TIMEKW      [reduce using rule 20 (attr_list)]
    DEVICE_ID   [reduce using rule 20 (attr_list)]
    ENTITY_ID   [reduce using rule 20 (attr_list)]
    WITH        [reduce using rule 20 (attr_list)]
    CHANGES     [reduce using rule 20 (attr_list)]
    $default    reduce using rule 20 (attr_list)

    attr_list  go to state 43
    attr       go to state 40


State 27

   12 field: WHEN LBRACKET condition_items • RBRACKET
   18 condition_items: condition_items • COMMA condition_item

    RBRACKET  shift, and go to state 44
    COMMA     shift, and go to state 45


State 28

   17 condition_items: condition_item •

    $default  reduce using rule 17 (condition_items)


State 29

   38 action_item: LPAREN • action_body RPAREN

    IDENTIFIER  shift, and go to state 46
    IF          shift, and go to state 47
    AUTOMATION  shift, and go to state 48
    DELAY       shift, and go to state 49

    action_body    go to state 50
    simple_action  go to state 51


State 30

   13 field: DO LBRACKET action_items • RBRACKET

    RBRACKET  shift, and go to state 52


State 31

   36 action_items: action_item •
   37             | action_item • COMMA action_items

    COMMA  shift, and go to state 53

    $default  reduce using rule 36 (action_items)


State 32

   29 attr: IDENTIFIER • IS IDENTIFIER
   30     | IDENTIFIER • IDENTIFIER
   31     | IDENTIFIER • LBRACKET id_list RBRACKET

    IDENTIFIER  shift, and go to state 54
    IS          shift, and go to state 55
    LBRACKET    shift, and go to state 56


State 33

   25 attr: STATEKW • IS IDENTIFIER
   28     | STATEKW • CHANGES TO IDENTIFIER

    IS       shift, and go to state 57
    CHANGES  shift, and go to state 58


State 34

   26 attr: TIMEKW • AFTER TIME_LITERAL
   27     | TIMEKW • BEFORE TIME_LITERAL

    AFTER   shift, and go to state 59
    BEFORE  shift, and go to state 60


State 35

   23 attr: DEVICE_ID • IDENTIFIER

    IDENTIFIER  shift, and go to state 61


State 36

   24 attr: ENTITY_ID • IDENTIFIER

    IDENTIFIER  shift, and go to state 62


State 37

   33 attr: WITH • IDENTIFIER LBRACKET id_list RBRACKET

    IDENTIFIER  shift, and go to state 63


State 38

   32 attr: CHANGES • TO IDENTIFIER

    TO  shift, and go to state 64


State 39

   16 listen_item: LPAREN attr_list • RPAREN
   22 attr_list: attr_list • attr

    IDENTIFIER  shift, and go to state 32
    STATEKW     shift, and go to state 33
    TIMEKW      shift, and go to state 34
    DEVICE_ID   shift, and go to state 35
    ENTITY_ID   shift, and go to state 36
    WITH        shift, and go to state 37
    CHANGES     shift, and go to state 38
    RPAREN      shift, and go to state 65

    attr  go to state 66


State 40

   21 attr_list: attr •

    $default  reduce using rule 21 (attr_list)


State 41

   11 field: LISTEN LBRACKET listen_items RBRACKET •

    $default  reduce using rule 11 (field)


State 42

   15 listen_items: listen_items COMMA • listen_item

    LPAREN  shift, and go to state 23

    listen_item  go to state 67


State 43

   19 condition_item: LPAREN attr_list • RPAREN
   22 attr_list: attr_list • attr

    IDENTIFIER  shift, and go to state 32
    STATEKW     shift, and go to state 33
    TIMEKW      shift, and go to state 34
    DEVICE_ID   shift, and go to state 35
    ENTITY_ID   shift, and go to state 36
    WITH        shift, and go to state 37
    CHANGES     shift, and go to state 38
    RPAREN      shift, and go to state 68

    attr  go to state 66


State 44

   12 field: WHEN LBRACKET condition_items RBRACKET •

    $default  reduce using rule 12 (field)


State 45

   18 condition_items: condition_items COMMA • condition_item

    LPAREN  shift, and go to state 26

    condition_item  go to state 69


State 46

   51 simple_action: IDENTIFIER • IDENTIFIER attr_list

    IDENTIFIER  shift, and go to state 70


State 47

   39 action_body: IF • condition_group action_block else_part

    LBRACKET  shift, and go to state 71
    LPAREN    shift, and go to state 72

    condition_group  go to state 73


State 48

   50 simple_action: AUTOMATION • TRIGGERKW attr_list

    TRIGGERKW  shift, and go to state 74


State 49

   49 simple_action: DELAY • DURATION_LITERAL

    DURATION_LITERAL  shift, and go to state 75


State 50

   38 action_item: LPAREN action_body • RPAREN

    RPAREN  shift, and go to state 76


State 51

   40 action_body: simple_action •

    $default  reduce using rule 40 (action_body)


State 52

   13 field: DO LBRACKET action_items RBRACKET •

    $default  reduce using rule 13 (field)


State 53

   37 action_items: action_item COMMA • action_items

    LPAREN  shift, and go to state 29

    action_items  go to state 77
    action_item   go to state 31


State 54

   30 attr: IDENTIFIER IDENTIFIER •

    $default  reduce using rule 30 (attr)


State 55

   29 attr: IDENTIFIER IS • IDENTIFIER

    IDENTIFIER  shift, and go to state 78


State 56

   31 attr: IDENTIFIER LBRACKET • id_list RBRACKET

    IDENTIFIER  shift, and go to state 79

    id_list  go to state 80


State 57

   25 attr: STATEKW IS • IDENTIFIER

    IDENTIFIER  shift, and go to state 81


State 58

   28 attr: STATEKW CHANGES • TO IDENTIFIER

    TO  shift, and go to state 82


State 59

   26 attr: TIMEKW AFTER • TIME_LITERAL

    TIME_LITERAL  shift, and go to state 83


State 60

   27 attr: TIMEKW BEFORE • TIME_LITERAL

    TIME_LITERAL  shift, and go to state 84


State 61

   23 attr: DEVICE_ID IDENTIFIER •

    $default  reduce using rule 23 (attr)


State 62

   24 attr: ENTITY_ID IDENTIFIER •

    $default  reduce using rule 24 (attr)


State 63

   33 attr: WITH IDENTIFIER • LBRACKET id_list RBRACKET

    LBRACKET  shift, and go to state 85


State 64

   32 attr: CHANGES TO • IDENTIFIER

    IDENTIFIER  shift, and go to state 86


State 65

   16 listen_item: LPAREN attr_list RPAREN •

    $default  reduce using rule 16 (listen_item)


State 66

   22 attr_list: attr_list attr •

    $default  reduce using rule 22 (attr_list)


State 67

   15 listen_items: listen_items COMMA listen_item •

    $default  reduce using rule 15 (listen_items)


State 68

   19 condition_item: LPAREN attr_list RPAREN •

    $default  reduce using rule 19 (condition_item)


State 69

   18 condition_items: condition_items COMMA condition_item •

    $default  reduce using rule 18 (condition_items)


State 70

   51 simple_action: IDENTIFIER IDENTIFIER • attr_list

    IDENTIFIER  shift, and go to state 32
    STATEKW     shift, and go to state 33
    TIMEKW      shift, and go to state 34
    DEVICE_ID   shift, and go to state 35
    ENTITY_ID   shift, and go to state 36
    WITH        shift, and go to state 37
    CHANGES     shift, and go to state 38

    IDENTIFIER  [reduce using rule 20 (attr_list)]
    STATEKW     [reduce using rule 20 (attr_list)]
    TIMEKW      [reduce using rule 20 (attr_list)]
    DEVICE_ID   [reduce using rule 20 (attr_list)]
    ENTITY_ID   [reduce using rule 20 (attr_list)]
    WITH        [reduce using rule 20 (attr_list)]
    CHANGES     [reduce using rule 20 (attr_list)]
    $default    reduce using rule 20 (attr_list)

    attr_list  go to state 87
    attr       go to state 40


State 71

   41 condition_group: LBRACKET • condition_items RBRACKET

    LPAREN  shift, and go to state 26

    condition_items  go to state 88
    condition_item   go to state 28


State 72

   42 condition_group: LPAREN • attr_list RPAREN

    IDENTIFIER  shift, and go to state 32
    STATEKW     shift, and go to state 33
    TIMEKW      shift, and go to state 34
    DEVICE_ID   shift, and go to state 35
    ENTITY_ID   shift, and go to state 36
    WITH        shift, and go to state 37
    CHANGES     shift, and go to state 38

    IDENTIFIER  [reduce using rule 20 (attr_list)]
    STATEKW     [reduce using rule 20 (attr_list)]
    TIMEKW      [reduce using rule 20 (attr_list)]
    DEVICE_ID   [reduce using rule 20 (attr_list)]
    ENTITY_ID   [reduce using rule 20 (attr_list)]
    WITH        [reduce using rule 20 (attr_list)]
    CHANGES     [reduce using rule 20 (attr_list)]
    $default    reduce using rule 20 (attr_list)

    attr_list  go to state 89
    attr       go to state 40


State 73

   39 action_body: IF condition_group • action_block else_part

    IDENTIFIER  shift, and go to state 46
    AUTOMATION  shift, and go to state 48
    DELAY       shift, and go to state 49

    IDENTIFIER  [reduce using rule 43 (action_block)]
    AUTOMATION  [reduce using rule 43 (action_block)]
    DELAY       [reduce using rule 43 (action_block)]
    $default    reduce using rule 43 (action_block)

    action_block   go to state 90
    simple_action  go to state 91


State 74

   50 simple_action: AUTOMATION TRIGGERKW • attr_list

    IDENTIFIER  shift, and go to state 32
    STATEKW     shift, and go to state 33
    TIMEKW      shift, and go to state 34
    DEVICE_ID   shift, and go to state 35
    ENTITY_ID   shift, and go to state 36
    WITH        shift, and go to state 37
    CHANGES     shift, and go to state 38

    IDENTIFIER  [reduce using rule 20 (attr_list)]
    STATEKW     [reduce using rule 20 (attr_list)]
    TIMEKW      [reduce using rule 20 (attr_list)]
    DEVICE_ID   [reduce using rule 20 (attr_list)]
    ENTITY_ID   [reduce using rule 20 (attr_list)]
    WITH        [reduce using rule 20 (attr_list)]
    CHANGES     [reduce using rule 20 (attr_list)]
    $default    reduce using rule 20 (attr_list)

    attr_list  go to state 92
    attr       go to state 40


State 75

   49 simple_action: DELAY DURATION_LITERAL •

    $default  reduce using rule 49 (simple_action)


State 76

   38 action_item: LPAREN action_body RPAREN •

    $default  reduce using rule 38 (action_item)


State 77

   37 action_items: action_item COMMA action_items •

    $default  reduce using rule 37 (action_items)


State 78

   29 attr: IDENTIFIER IS IDENTIFIER •

    $default  reduce using rule 29 (attr)


State 79

   34 id_list: IDENTIFIER •
   35        | IDENTIFIER • COMMA id_list

    COMMA  shift, and go to state 93

    $default  reduce using rule 34 (id_list)


State 80

   31 attr: IDENTIFIER LBRACKET id_list • RBRACKET

    RBRACKET  shift, and go to state 94


State 81

   25 attr: STATEKW IS IDENTIFIER •

    $default  reduce using rule 25 (attr)


State 82

   28 attr: STATEKW CHANGES TO • IDENTIFIER

    IDENTIFIER  shift, and go to state 95


State 83

   26 attr: TIMEKW AFTER TIME_LITERAL •

    $default  reduce using rule 26 (attr)


State 84

   27 attr: TIMEKW BEFORE TIME_LITERAL •

    $default  reduce using rule 27 (attr)


State 85

   33 attr: WITH IDENTIFIER LBRACKET • id_list RBRACKET

    IDENTIFIER  shift, and go to state 79

    id_list  go to state 96


State 86

   32 attr: CHANGES TO IDENTIFIER •

    $default  reduce using rule 32 (attr)


State 87

   22 attr_list: attr_list • attr
   51 simple_action: IDENTIFIER IDENTIFIER attr_list •

    IDENTIFIER  shift, and go to state 32
    STATEKW     shift, and go to state 33
    TIMEKW      shift, and go to state 34
    DEVICE_ID   shift, and go to state 35
    ENTITY_ID   shift, and go to state 36
    WITH        shift, and go to state 37
    CHANGES     shift, and go to state 38

    IDENTIFIER  [reduce using rule 51 (simple_action)]
    $default    reduce using rule 51 (simple_action)

    attr  go to state 66


State 88

   18 condition_items: condition_items • COMMA condition_item
   41 condition_group: LBRACKET condition_items • RBRACKET
